2002-06-04  Andrew G. Tereschenko  <tag@ibis.odessa.ua>

	* src/double.cpp: additional parenthesis near shift operators
	to make MSVC v7 (.NET) happier.

2002-06-03  Chris Dennis  <chris.dennis@invidi.com>

	* src/expr.cpp (ProcessClassInstanceCreationExpression):
	deal with VC++'s inability to support the new ANSI 'for'
	scoping rules; again.

2002-05-31  Chris Abbey  <jikes@cabbey.net>

	* src/stream.cpp (getErrorMessage): clarify error message
	for assert as a keyword.

2002-05-23  Eric Blake  <ebb9@email.byu.edu>

	* src/definite.cpp (DefinitePLUSPLUSOrMINUSMINUS): Yet another
	corner case - bug 2398.

2002-05-23  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (CheckSimpleName): One last bug in nested classes -
	bug 440.

2002-05-22  Eric Blake  <ebb9@email.byu.edu>

	* src/error.h (ZERO_DIVIDE_ERROR):
	* src/error.cpp (ZERO_DIVIDE_ERROR):
	* src/expr.cpp (ProcessSLASH, ProcessMOD),
	(ProcessAssignmentExpression): Remove ZERO_DIVIDE_ERROR, since
	http://java.sun.com/docs/books/jls/clarifications-2-2nd-ed.html -
	the JLS2 clarification page - states division by 0 is legal Java.

2002-05-22  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h (NewAstArray): Make this a global function, to
	workaround egcs-1.1.2 bug.

2002-05-22  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp: Allow interface int clone(); - see bug 2878.
	* src/error.cpp: Add new UNIMPLEMENTABLE_INTERFACE warning.
	* src/error.h: Ditto.
	* src/symbol.cpp: Fix core dump caused by last patch.

2002-05-22  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h: Minor touchups to previous patch.
	* src/body.cpp:
	* src/bytecode.cpp:
	* src/bytecode.h:
	* src/code.cpp:
	* src/decl.cpp:
	* src/definite.cpp:
	* src/expr.cpp:
	* src/modifier.cpp:
	* src/semantic.h:
	* src/symbol.cpp:
	* src/symbol.h:
	* src/unparse.cpp:

2002-05-22  Eric Blake  <ebb9@email.byu.edu>

	* src/java.g: Change grammar to detect this() and super() anywhere
	in method - bug 2805.
	* src/javaact.cpp: Regenerate.
	* src/javaact.h: Ditto.